--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -103,7 +103,7 @@
                     </div>
                 </div>
                 <div>
-                    <form action="/toregister" method="post" class="contact-wrapper">
+                    <form action="/toRegister" method="post" class="contact-wrapper">
                         昵称:<input type="text" name="nickname" placeholder="昵称" required>
                         邮箱:<input type="email" name="email" placeholder="邮箱" required>
                         密码:<input type="password" id="inputpassword" name="spassword" placeholder="密码" required onblur="checkSame()">
