--- a/gate/src/main/resources/templates/index.html
+++ b/gate/src/main/resources/templates/index.html
@@ -74,8 +74,8 @@
                                         <li><a href="/resource">资源</a></li>
                                         <li><a href="/followed">关注</a></li>
                                         <li><a href="/news">消息</a></li>
-                                        <li><a href="/my" id="url01">我的</a></li>
-                                        <li><a href="/editor">发布帖子</a></li>
+                                        <li><a href="/my/token" id="url01">我的</a></li>
+                                        <li><a href="/editor/token" id="url02">发布帖子</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -92,7 +92,8 @@
                                     document.getElementById('isAuth').style.display = 'none';
                                     let strings = token.split("."); //截取token，获取载体
                                     let tokenInfo = JSON.parse(decodeURIComponent(escape(window.atob(strings[1].replace(/-/g, "+").replace(/_/g, "/"))))); //解析，需要吧‘_’,'-'进行转换否则会无法解析
-                                    document.getElementById("url01").href += "/" + token.substring(1,token.length-1)
+                                    document.getElementById("url01").href = "/my/" + token.substring(1,token.length-1)
+                                    document.getElementById("url02").href = "/editor/" + token.substring(1,token.length-1)
                                     let temLi01 = document.createElement("li");
                                     let temImg = document.createElement("img");
                                     temImg.src = FILE_SERVER_URL + tokenInfo.userInfo.avatarUrl;
