--- a/gate/src/main/resources/templates/message.html
+++ b/gate/src/main/resources/templates/message.html
@@ -90,6 +90,10 @@
                 <div class="col-xl-6 col-lg-8 col-md-8">
                     <div class="wantToWork-caption wantToWork-caption2">
                         <h3 th:text="${msg}" style="color: red"></h3>
+                        <script th:inline="javascript">
+                            let msg = [[${msg}]]
+                            if (msg == "请先登录") window.sessionStorage.removeItem("token")
+                        </script>
                     </div>
                 </div>
                 <div class="col-xl-2 col-lg-2 col-md-3">
