--- a/gate/src/main/resources/templates/editor.html
+++ b/gate/src/main/resources/templates/editor.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:shiro="http://www.pollix.at/thymeleaf/shiro"  xmlns:th="http://thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>鱼水狩·发布帖子</title>
@@ -62,10 +62,10 @@
                                     <ul id="navigation">
                                         <li><a href="/index">首页</a></li>
                                         <li><a href="/resource">资源</a></li>
-                                        <li><a href="/followed">关注</a></li>
-                                        <li><a href="/news">消息</a></li>
-                                        <li><a href="/my">我的</a></li>
-                                        <li><a href="/editor">发布帖子</a></li>
+                                        <li><a href="/followed/token">关注</a></li>
+                                        <li><a href="/news/token">消息</a></li>
+                                        <li><a href="/my/token" id="url01">我的</a></li>
+                                        <li><a href="/editor/token" id="url02">发布帖子</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -123,7 +123,6 @@
                             <img src="/assets/img/logo/logo.png" alt="QAQ">
                             <span><a href="#">245149633@qq.com</a></span>
                             <p>以上是作者邮箱,有意见可联系作者</p>
-                            <p>2021-5-1</p>
                         </div>
                     </div>
                 </div>
